# savesync

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
