[package]
name = "savesync"
version = "0.1.0"
authors = [
  "Andy Dirnberger <andy.dirnberger@gmail.com>",
]
edition = "2018"
description = "Synchronize game saves."
readme = "README"
repository = "https://github.com/dirn/savesync"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.*"
log = "0.4.*"
notify = "4.0.*"
pathdiff = "0.2.*"
